--- a/src/app/+admin/+forms/containers/create-form/create-form.component.scss
+++ b/src/app/+admin/+forms/containers/create-form/create-form.component.scss
@@ -103,12 +103,6 @@
         cursor: grabbing;
       }
 
-      i.fa-expand-arrows-alt {
-        margin-right: 6px;
-        padding-right: 10px;
-        border-right: 1px solid rgba($secondary, 0.2);
-      }
-
       i.fa-angle-double-right {
         float: right;
         padding: 2px;
@@ -123,14 +117,18 @@
     }
   }
 
-  .selected-fields {
-    .msg {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 50px;
-    }
+  ::ng-deep field-icon i {
+    margin-right: 6px;
+    padding-right: 10px;
+    border-right: 1px solid rgba($secondary, 0.2);
+  }
+
+  .msg {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 50px;
   }
 
   [pDroppable] {
