--- a/src/main.scss
+++ b/src/main.scss
@@ -11,6 +11,7 @@
 @import '~@fortawesome/fontawesome-free/scss/solid.scss';
 
 // Theme customization
+@import 'theme/prime-ng-theme';
 @import 'theme/theme';
 
 /* You can add global styles to this file, and also import other style files */
