--- a/src/theme/_theme.scss
+++ b/src/theme/_theme.scss
@@ -25,6 +25,16 @@
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   }
 
+  /********************************** Formly mesasge error  ***********************/
+  .ui-messages-error {
+    margin: 0;
+    margin-top: 4px;
+    border: none;
+    font-size: 70%;
+    padding: 0;
+    color: #a80000;
+  }
+
   /********************************** CARDS ***********************/
   .card {
     .card-title {
